# ftp-server

simple-ftp-master/: CMakeLists.txt  Makefile  README  client.c  client.h  server.c  server.h  service.c  service.h  siftp  siftp.c  siftp.h  siftpd
simple-ftp-master/Testing/: test.sh
