cmake_minimum_required(VERSION 3.9)
project(simple_ftp_master)

set(CMAKE_CXX_STANDARD 11)

add_executable(simple_ftp_master
        ftp_dir/ex1/_DS_Store
        "ftp_dir/ex1/_DS_Store(1)"
        ftp_dir/ex1/CMMSE_2017.pdf
        ftp_dir/ex2/_DS_Store
        "ftp_dir/ex2/_DS_Store(1)"
        ftp_dir/ex2/CMMSE_2017.pdf
        ftp_dir/more/2.txt
        ftp_dir/1.txt
        ftp_dir/3.txt
        ftp_dir/_DS_Store
        "ftp_dir/_DS_Store(1)"
        ftp_dir/source.txt
        Testing/example_dir/1.txt
        Testing/example_dir/3.txt
        Testing/example_dir/_
        "Testing/example_dir/_(1)"
        Testing/example_dir/_DS_Store
        "Testing/example_dir/_DS_Store(1)"
        Testing/example_dir/CMMSE_2017.pdf
        Testing/example_dir/commands1.txt
        Testing/example_dir2/1.txt
        Testing/example_dir2/3.txt
        Testing/example_dir2/_DS_Store
        "Testing/example_dir2/_DS_Store(1)"
        Testing/example_dir2/CMMSE_2017.pdf
        Testing/example_dir2/commands2.txt
        Testing/_DS_Store
        "Testing/_DS_Store(1)"
        Testing/test.sh
        1.txt
        1.txtx
        3.txt
        _DS_Store
        "_DS_Store(1)"
        client.c
        client.h
        client.o
        Makefile
        README
        server.c
        server.h
        server.o
        service.c
        service.h
        service.o
        siftp
        siftp.c
        siftp.h
        siftp.o
        siftpd
        source.txt
        test1)
